<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorPrimary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/cc_rubik_mono_one"
                    android:text="@string/title_nav_tvs"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"
                    android:textStyle="normal" />

                <ImageButton
                    android:id="@+id/btn_search"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_search_black_24dp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_popular_tvs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/collection_popular"
                        android:theme="@style/HeaderMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/more"
                        android:theme="@style/HeaderSmall" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_popular_tvs"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:clipToPadding="false"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="16dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_air_today_tvs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/air_today"
                        android:theme="@style/HeaderMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/more"
                        android:theme="@style/HeaderSmall" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_air_today_tvs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingRight="20dp"
                android:paddingBottom="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_on_the_air_tvs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/on_the_air"
                        android:theme="@style/HeaderMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/more"
                        android:theme="@style/HeaderSmall" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_on_the_air_tvs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingRight="20dp"
                android:paddingBottom="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background_pattern" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/cc_montserrat_medium"
                    android:text="@string/best_tvs_tmdb"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>